...
                                    Text("You have visited here \(trigpoint.visits?.count ?? 0) times")
                                } else if visitCount == 1 {
                                    Text("You visited here once!")
                                }
                            }
                        } else {
                            Text("You have not visited here yet!")
                        }
                        if let location = currentLocation {
                            if location.distance(from:trigpoint.location) < kCollectionThreshold {
                                Button {
                                    showVisitedSheet = true
                                } label: {
                                    Text("Mark as visited")
                                }.sheet(isPresented: $showVisitedSheet) {
                                    VisitedSheet(trigpoint: trigpoint)
                                }
                            }
                        }
                    }
...
