...
    }
}

extension TrigPoint {
    
    enum PointType: String, CaseIterable, Identifiable {
        case activeStation = "Active station"
        case berntsen = "Berntsen"
        case bolt = "Bolt"
        case brassPlate = "Brass Plate"
        case buriedBlock = "Buried Block"
        case cannon = "Cannon"
        case concreteRing = "Concrete Ring"
...
