...
            }
            .toolbar {
                ToolbarItem(placement: .primaryAction) {
                    EditButton()
                }
            }
            .navigationTitle("Visited")
        } else {
            Spacer()
            Text("You've not visited any points yet!")
            Spacer()
        }
    }
    
    private func deleteItems(offsets: IndexSet) {
        withAnimation {
...
