...
                        }
                    }
                }
            }.sheet(isPresented: $showSheet) {
                ListFilters()
            }
            .navigationTitle("Nearby")
        } else {
            Spacer()
            Text("Acquiring location...")
            Spacer()
        }
    }
...
